src/objects/Site_Visit__c.object
<CustomObject>
    <fields>
        <fullName>Budget1__c</fullName>
        <label>Budget</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <picklist>
            <picklistValues>
                <fullName>50 Lacs – 1Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Cr – 2 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Cr - 4 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Cr and Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bunglw_Name__c</fullName>
        <label>Bungalow Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Came_With_Family__c</fullName>
        <label>Came With Family</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Contact__c</fullName>
        <formula>Channel_Partner__r.Mobile_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_ID__c</fullName>
        <formula>Channel_Partner__r.Xcelerate_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Channel_Partner__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Choice_of_Inventory__c</fullName>
        <label>Choice of Inventory</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial__c</fullName>
        <label>Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>Office Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_House_Ownership__c</fullName>
        <label>Current House Ownership:</label>
        <picklist>
            <picklistValues>
                <fullName>Owned house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rented House</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Name1__c</fullName>
        <label>Customer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Possession__c</fullName>
        <label>Desired Possession</label>
        <picklist>
            <picklistValues>
                <fullName>Ready-to-Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ease_of_Payment__c</fullName>
        <label>Ease of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Customer_Name__r.Account_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Indian Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sindhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Indian Hindu</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_Plan__c</fullName>
        <label>Follow-up Plan</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Time__c</fullName>
        <label>In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <label>Last Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location1__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Un-Married</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_No2__c</fullName>
        <label>Mobile No</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <formula>Customer_Name__r.Account_Mobile_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Follow_Up_Date__c</fullName>
        <label>Next Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Out_Time__c</fullName>
        <label>Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pin Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_work__c</fullName>
        <label>Place of work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possession_Timelines__c</fullName>
        <label>Possession Timelines</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Site Visits</relationshipLabel>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Purchase1__c</fullName>
        <label>Purpose of Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staying there</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekend Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Gain Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transit Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appreciation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Purchase__c</fullName>
        <label>Purpose of Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reasons_if_not_interested__c</fullName>
        <label>Reasons (if not interested)</label>
        <picklist>
            <picklistValues>
                <fullName>Product design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaastu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Timelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Eligibility Issue</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residentail__c</fullName>
        <label>Residentail</label>
        <picklist>
            <picklistValues>
                <fullName>2BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4BHK</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SM_feedback_on_customer_Remarks__c</fullName>
        <label>SM feedback on customer/Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_ManagerL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Tripathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akhil Chaturvedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayank Yadav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaseem Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitin Deshpande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sajesh Pattanaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarfraz Syed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Herwade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yash Kothari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanmay Gore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavan Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadip Thakur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omkar Patil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratik Paleja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purnima Upadhyay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunny Faldu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudresh Bhise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmesh Sanghavi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solitaire_Brand__c</fullName>
        <label>Solitaire Brand</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source1__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corprate Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door to Door Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstation Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty &amp; Referral Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>TEXT(Customer_Name__r.LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourcing_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sourcing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Visits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sourcing_Manager__c</fullName>
        <label>Sourcing Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Akhil Chaturvedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Herwade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayank Yadav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitin Deshpande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omkar Patil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pavan Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Tripathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sajesh Pattanaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarfraz Syed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanmay Gore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaseem Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yash Kothari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anurag Rangankar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunny Faldu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudresh Bhise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratik Paleja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lokesh Shewaramani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadip Thakur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Source2__c</fullName>
        <label>Sub Source</label>
        <picklist>
            <controllingField>Source1__c</controllingField>
            <picklistValues>
                <fullName>99 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magic Bricks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Times of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lokmat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loksatta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Mirchi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fever 104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akurdi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Devachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Khed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambegaon BK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anandnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armament</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aundh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aundh Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balaji Nagar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Talked_about_competition__c</fullName>
        <label>Talked about competition</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Visit__c</fullName>
        <label>Type of Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Fresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Rating__c</fullName>
        <label>Visit Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Walk_in_Details__c</fullName>
        <label>Walk-in Details</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Site Visit</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Site Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visits</pluralLabel>
    <recordTypes>
        <fullName>Site_Visit_Form</fullName>
        <active>true</active>
        <label>Site Visit Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Site_revisit</fullName>
        <active>true</active>
        <label>Site revisit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>